# django-console-import

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: settings.py  settings_env.py  urls.py
src/pol/: admin.py  apps.py  models.py
src/pol/import_export/: resources.py
src/pol/import_export/adapters/: __init__.py  base.py  csv.py  json.py  xml.py
src/pol/management/commands/: import-pol.py
src/pol/migrations/: 0001_initial.py
